# PartiallyCollapsedLDA

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pom.xml  pyproject.toml  stoplist-20ng-large.txt  stoplist.txt
python/pclda/: models.py  utils.py
src/main/java/cc/mallet/classify/: KLDivergenceClassifier.java  KLDivergenceClassifierMultiCorpus.java
src/main/java/cc/mallet/configuration/: ConfigFactory.java  Configuration.java  LDACommandLineParser.java  LDAConfiguration.java  LDARemoteConfiguration.java  LDATrainTestCommandLineParser.java  LDATrainTestConfiguration.java  ModelFactory.java  ParsedLDAConfiguration.java  ParsedLDATrainTestConfiguration.java  ParsedRemoteLDAConfiguration.java  SimpleLDAConfiguration.java  SubConfig.java
src/main/resources/: topic_priors.txt
src/main/resources/configuration/: Clinton.cfg  Configuration-README.md  Configuration-README.txt  GlobalPLDAConfig.cfg  KLClassification.cfg  LDASimilarity.cfg  PLDAConfig.cfg  PLDAConfigDeltaN.cfg  PoissonPolyaUrnHLDA.cfg  PolyaUrnConfig.cfg  RSConfig.cfg  SmokeTestConfig.cfg  SpaliasMainRemote.conf  SpaliasWorkerRemote.conf  TestConfig.cfg  TestPriorsConfig.cfg  TopicMassConfig.cfg  UCBaseLineConfig.cfg  UnitTestConfig.cfg  UnitTestConfigWithCommaDesc.cfg  VSConfig.cfg  minimal.cfg
src/main/resources/datasets/: README.txt  SmallTexts.txt  small.txt  special_chars.txt  tfidf-samples.txt
src/test/resources/: document_priors.txt  max_doc_buf-2.cfg  max_doc_buf-small.cfg  max_doc_buf.cfg  nips_document_priors.txt  special_chars.cfg  topic_priors.txt  topic_priors_SmallTexts.txt
(+256 files in other folders)
